tests/baselines/reference/functionOverloads11.errors.txt
functionOverloads11.ts(1,10): error TS2394: This overload signature is not compatible with its implementation signature.


==== functionOverloads11.ts (1 errors) ====
    function foo():number;
             ~~~
!!! error TS2394: This overload signature is not compatible with its implementation signature.
!!! related TS2750 functionOverloads11.ts:2:10: The implementation signature is declared here.
    function foo():string { return "" }
    